# psutil-extra

./: .cirrus.yml  .coveragerc  .isort.cfg  Pipfile  README.md  codecov.yml  setup.cfg
.github/workflows/: ci.yml
docs/: conf.py  index.rst
psutil_extra/: __init__.py  _bsd.py  _cache.py  _ffi.py  _psdragonfly.py  _psfreebsd.py  _pslinux.py  _psmacosx.py  _psnetbsd.py  _psopenbsd.py  _psposix.py  _pssolaris.py  _util.py
scripts/: check.sh  format.sh
tests/: test_as_dict.py  test_cache.py  test_main.py  test_resource.py  test_signal.py  util.py
