[metadata]
name = psutil-extra
version = attr: psutil_extra.__version__
url = https://gitlab.com/cptpcrd/psutil-extra
description = Some helper functions to go along with the ones in psutil
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = psutil
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: FreeBSD

[options]
packages = find:
python_requires = >=3.7
install_requires =
    psutil

# vim: ts=4 expandtab
